--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -28,6 +28,9 @@
           <a href="/about.html" class="nav-link">About</a>
         </li>
         <li class="nav-item">
+          <a href="/contact.html" class="nav-link">Contact</a>
+        </li>
+        <li class="nav-item">
           <a href="/feed.xml" class="nav-link">RSS</a>
         </li>
         <li class="nav-item">
