--- a/source/layouts/_series_card.erb
+++ b/source/layouts/_series_card.erb
@@ -1,39 +1,34 @@
 <article class="card">
-  <div class="card-header">
+  <div class="card-content">
     <h2 class="card-title">
-      <%= link_to series_name, "/series/#{series_name.downcase.gsub(/\s+/, '-')}.html" %>
+      <% if defined?(series_metadata) && series_metadata %>
+        <%= link_to series_metadata[:name], series_url(series_metadata) %>
+      <% else %>
+        <%= link_to series_name, series_url(series_name) %>
+      <% end %>
     </h2>
+    
+    <p class="card-description">
+      <% if defined?(series_metadata) && series_metadata && series_metadata[:description] %>
+        <%= series_metadata[:description] %>
+      <% else %>
+        <% latest_article = articles.sort_by(&:date).last %>
+        <% if latest_article.data.summary %>
+          <%= latest_article.data.summary %>
+        <% else %>
+          A multi-part exploration of <%= (defined?(series_metadata) && series_metadata) ? series_metadata[:name].downcase : series_name.downcase %>.
+        <% end %>
+      <% end %>
+    </p>
     
     <div class="card-meta">
       <span class="card-count"><%= articles.length %> posts</span>
-      <span class="card-date">
-        <%= articles.sort_by(&:date).first.date.strftime('%B %Y') %> - 
-        <%= articles.sort_by(&:date).last.date.strftime('%B %Y') %>
-      </span>
+      <% if defined?(series_metadata) && series_metadata && series_metadata[:status] %>
+        <span class="card-status"><%= series_metadata[:status] %></span>
+      <% end %>
     </div>
-  </div>
-  
-  <div class="card-content">
-    <% latest_article = articles.sort_by(&:date).last %>
-    <% if latest_article.data.summary %>
-      <p class="card-summary"><%= latest_article.data.summary %></p>
-    <% end %>
     
-    <div class="series-posts-list">
-      <h3>Posts in this series:</h3>
-      <ul>
-        <% articles.sort_by(&:date).each_with_index do |article, index| %>
-          <li>
-            <span class="post-number"><%= index + 1 %>.</span>
-            <%= link_to article.title, article, class: 'series-post-link' %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-  
-  <div class="card-actions">
-    <%= link_to 'Explore Series', "/series/#{series_name.downcase.gsub(/\s+/, '-')}.html", 
+    <%= link_to "Explore Series", series_url(defined?(series_metadata) && series_metadata ? series_metadata : series_name), 
                 class: 'button button--primary' %>
   </div>
 </article> 
