--- a/source/layouts/_blog_card.erb
+++ b/source/layouts/_blog_card.erb
@@ -2,22 +2,26 @@
   <h2 class="card-title">
     <%= link_to article.title, article %>
   </h2>
-  <div class="card-meta">
-    <span class="card-date"><%= article.date.strftime('%B %d, %Y') %></span>
-  </div>
+  
   <% if article.summary %>
     <div class="card-content">
       <p><%= article.summary %></p> 
     </div>
   <% end %>
-  <% unless article.tags.empty? %>
-    <div class="card-tags">
-      <% article.tags.each do |tag| %>
-        <%= link_to tag, tag_path(tag), class: 'card-tag' %>
-      <% end %>
-    </div>
-  <% end %>
+  
+  <div class="card-meta">
+    <span class="card-date"><%= article.date.strftime('%B %d, %Y') %></span>
+    <% unless article.tags.empty? %>
+      <span class="card-meta-separator">|</span>
+      <div class="card-tags">
+        <% article.tags.each do |tag| %>
+          <%= link_to tag, tag_path(tag), class: 'card-tag' %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  
   <div class="card-actions">
-    <%= link_to 'Read More', article, class: 'button button--primary' %>
+    <%= link_to 'Read More', article, class: 'button button--card-action' %>
   </div>
 </div> 
