--- a/source/writing/index.html.erb
+++ b/source/writing/index.html.erb
@@ -3,14 +3,17 @@ title: "All Posts - Ritchie Macapinlac"
 description: "Browse all blog posts by Ritchie Macapinlac. Articles about technology, parenting, productivity, and personal development."
 pageable: true
 per_page: 12
+layout: writing_layout
 ---
 
-<div class="container">
-  <header class="page-header">
-    <h1 class="page-title">All Posts</h1>
-    <p class="page-description">Thoughtful reflections on technology, parenting, productivity, and personal development.</p>
-  </header>
+<header class="page-header">
+  <h1 class="page-title">All Posts</h1>
+  <p class="page-description">
+    Thoughtful reflections on technology, parenting, productivity, and personal development.
+  </p>
+</header>
 
+<div class="page-content">
   <div class="posts-listing">
     <% page_articles.each_with_index do |article, i| %>
       <%= partial 'layouts/_blog_card', locals: {
@@ -35,4 +38,10 @@ per_page: 12
       <% end %>
     </nav>
   <% end %>
-</div> 
+</div>
+
+<footer class="page-footer">
+  <% content_for :writing_navigation do %>
+    <%= partial 'layouts/_writing_navigation' %>
+  <% end %>
+</footer> 
